--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <main>
     <section class="intro">
-        <h1>Bienvenido a la Experiencia de Exploración Mundial</h1>
+        <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
         <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
         <button>EMPEZAR</button>
-        <button>Sobre nosotros</button>
+        <button id="b2">Sobre nosotros</button>
     </section>
 </main>
 <footer>
