--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Experiencia de Exploración Mundial</title>
-<link rel="stylesheet" href="/styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Experiencia de Exploración Mundial</title>
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Mapa</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Mapa</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section class="intro">
-        <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
-        <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
-        <button>EMPEZAR</button>
-        <button id="b2">Sobre nosotros</button>
-    </section>
-</main>
-<footer>
-    <p>&copy; Ndea. 2023</p>
-</footer>
+    <main>
+        <section class="intro">
+            <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
+            <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
+            <button>EMPEZAR</button>
+            <button id="b2">Sobre nosotros</button>
+        </section>
+
+        <!-- Agrega la línea circular medio cortada aquí -->
+        <div class="linea-circular"></div>
+        <div class="circulo-pequeno circulo-pequeno1"></div>
+        <div class="circulo-pequeno circulo-pequeno2"></div>
+        <div class="circulo-pequeno circulo-pequeno3"></div>
+    </main>
+
+    <footer>
+        <p>&copy; Ndea. 2023</p>
+    </footer>
 </body>
 </html>
