--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
     
     <main>
         <section class="intro">
-            <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
-            <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
-            <button>EMPEZAR</button>
-            <button id="b2">Sobre nosotros</button>
+            <div class="content">
+                <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
+                <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
+                <button id="start">EMPEZAR</button>
+            </div>
+           <div>
+                <img src="https://freepngimg.com/download/earth/99276-earth-travel-picture-world-download-free-image.png" alt="">
+           </div>
         </section>
-
-        <!-- Agrega la línea circular medio cortada aquí -->
-        <div class="linea-circular"></div>
-        <div class="circulo-pequeno circulo-pequeno1"></div>
-        <div class="circulo-pequeno circulo-pequeno2"></div>
-        <div class="circulo-pequeno circulo-pequeno3"></div>
     </main>
 
     <footer>
