--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Mapa</a></li>
+                <li><a href="index.html" >Inicio</a></li>
+                <li><a href="map.html">Mapa</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <section class="intro">
+        <section class="intro" id="contenido">
             <div class="content">
                 <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
                 <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
                 <button id="start">EMPEZAR</button>
             </div>
-           <div>
-                <img src="https://freepngimg.com/download/earth/99276-earth-travel-picture-world-download-free-image.png" alt="">
+           <div class="image">
+                <img id="imagesimple" src="images/intro.webp" alt="">
            </div>
         </section>
     </main>
@@ -32,5 +32,6 @@
     <footer>
         <p>&copy; Ndea. 2023</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
