--- a/map.html
+++ b/map.html
@@ -1560,9 +1560,23 @@
         
         
     </main>
-
     <footer>
-        <p>&copy; Ndea. 2023</p>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contacto</h3>
+                <p>Email: info@ndeaweb.com</p>
+                <p>Teléfono: +123 456 789</p>
+            </div>
+            <div class="footer-section">
+                <h3>Síguenos</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+        <p class="footer-bottom">&copy; Ndea. 2023</p>
     </footer>
     <script src='js/map.js'></script>
 </body>
