--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiencia de Exploración Mundial</title>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html" >Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="map.html">Mapa</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
         <section class="intro" id="contenido">
             <div class="content">
                 <h1>Bienvenido a la Experiencia de Exploración <span id="Mundial">Mundial</span></h1>
-                <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en tiempo real y personaliza tu experiencia según tus intereses.</p>
+                <p>Sumérgete en un viaje único de descubrimiento. Explora lugares fascinantes, accede a información en
+                    tiempo real y personaliza tu experiencia según tus intereses.</p>
                 <button id="start">EMPEZAR</button>
             </div>
-           <div class="image">
+            <div class="image">
                 <img id="imagesimple" src="images/intro.webp" alt="">
-           </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -49,4 +52,5 @@
     <script src="js/script.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
