--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='./styles/styles.css'>
 </head>
 
-<body >
+<body>
     <header>
         <nav>
             <ul>
@@ -17,15 +17,13 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <section class='maped'>
             <div class='map-container'>
                 <?xml version='1.0'?>
-                <svg baseprofile='tiny' fill='#60e1cb' stroke='white' stroke-linecap='round'
-                    stroke-linejoin='round' stroke-width='1' version='1.2' viewbox='0 0 2000 857'
-                    xmlns='http://www.w3.org/2000/svg'
-                    id='mapsvg' class='fade-in'>
+                <svg baseprofile='tiny' fill='#60e1cb' stroke='white' stroke-linecap='round' stroke-linejoin='round'
+                    stroke-width='1' version='1.2' viewbox='0 0 2000 857' xmlns='http://www.w3.org/2000/svg' id='mapsvg'
+                    class='fade-in'>
                     <path
                         d='M1383 261.6l1.5 1.8-2.9 0.8-2.4 1.1-5.9 0.8-5.3 1.3-2.4 2.8 1.9 2.7 1.4 3.2-2 2.7 0.8 2.5-0.9 2.3-5.2-0.2 3.1 4.2-3.1 1.7-1.4 3.8 1.1 3.9-1.8 1.8-2.1-0.6-4 0.9-0.2 1.7-4.1 0-2.3 3.7 0.8 5.4-6.6 2.7-3.9-0.6-0.9 1.4-3.4-0.8-5.3 1-9.6-3.3 3.9-5.8-1.1-4.1-4.3-1.1-1.2-4.1-2.7-5.1 1.6-3.5-2.5-1 0.5-4.7 0.6-8 5.9 2.5 3.9-0.9 0.4-2.9 4-0.9 2.6-2-0.2-5.1 4.2-1.3 0.3-2.2 2.9 1.7 1.6 0.2 3 0 4.3 1.4 1.8 0.7 3.4-2 2.1 1.2 0.9-2.9 3.2 0.1 0.6-0.9-0.2-2.6 1.7-2.2 3.3 1.4-0.1 2 1.7 0.3 0.9 5.4 2.7 2.1 1.5-1.4 2.2-0.6 2.5-2.9 3.8 0.5 5.4 0z'
                         id='AF' name='Afghanistan'>
@@ -230,7 +228,7 @@
                     </path>
                     <path
                         d='M955.9 435.2l2.5 1.4 1 2.2 2.5 1.3 2-1.6 2.6-0.2 3.9 1.6 1.5 9.2-2.4 5.3-1.5 7.3 2.4 5.5-0.2 2.6-2.6 0-3.9-1.2-3.7 0-6.7 1.2-3.9 1.8-5.6 2.4-1.1-0.2 0.4-5.3 0.6-0.8-0.2-2.5-2.4-2.7-1.8-0.4-1.6-1.8 1.2-2.9-0.5-3.1 0.2-1.8 0.9 0 0.4-2.8-0.4-1.3 0.5-0.9 2.1-0.7-1.4-5.2-1.3-2.6 0.5-2.2 1.1-0.5 0.8-0.6 1.5 1 4.4 0 1-1.8 1 0.1 1.6-0.7 0.9 2.7 1.3-0.8 2.4-1z'
-                        id='CI' name='Côte d'Ivoire'>
+                        id='CI' name='Côte d' Ivoire'>
                     </path>
                     <path
                         d='M1072.8 454.2l-2.8 6.5-1.4 1.1-0.4 5 0.6 2.7-0.5 1.9 2.7 3.4 0.5 2.3 2.1 3.3 2.6 2.1 0.3 2.9 0.6 1.9-0.4 3.4-4.5-1.5-4.6-1.7-7.1-0.2-0.7-0.4-3.4 0.8-3.4-0.8-2.7 0.4-9.3-0.1 0.9-5.1-2.3-4.3-2.6-1-1.1-2.9-1.5-0.9 0.1-1.8 1.4-4.6 2.7-6.2 1.6 0 3.4-3.8 2.1-0.1 3.2 2.7 3.9-2.2 0.5-2.7 1.3-2.6 0.8-3.2 3-2.6 1.1-4.5 1.2-1.5 0.8-3.3 1.4-4.1 4.7-5 0.3-2.1 0.6-1.2-2.3-2.5 0.2-2.1 1.5-0.3 2.3 4.1 0.5 4.2-0.2 4.3 3.2 5.8-3.2 0-1.6 0.4-2.6-0.6-1.2 3 3.4 3.8 2.5 1.1 0.8 2.6 1.8 4.4-0.8 1.8z'
@@ -1545,9 +1543,7 @@
                     <circle cx='1798.2' cy='719.3' id='2'>
                     </circle>
                 </svg>
-
             </div>
-
         </section>
         <div id='infoModal'>
             <h2 id='countryName'>Nombre del País</h2>
@@ -1557,8 +1553,6 @@
             <p id='countryCurrency'>Moneda: </p>
             <p id='countryTemperature'>Temperatura de la capital: </p>
         </div>
-        
-        
     </main>
     <footer>
         <div class="footer-content">
